--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    </style>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container justify-content-center">
-          <img src="img/music.jpeg" alt="logo" width="50px">
+          <!--<img src="img/music.jpeg" alt="logo" width="50px">-->
           <a class="navbar-brand" href="#">Salsa</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
