--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container justify-content-center">
           <!--<img src="img/music.jpeg" alt="logo" width="50px">-->
-          <a class="navbar-brand" href="#">Salsa</a>
+          <a class="navbar-brand" href="#">Tecnología</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
             <ul class="navbar-nav text-center"><!--ms-auto ubica los botones a la derecha-->
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Canciones</a>
+                <a class="nav-link active" aria-current="page" href="#">Televisores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Registro</a>
+                <a class="nav-link active" href="#">Laptops</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Inicio Sesión</a>
+                <a class="nav-link active" href="#">Celulares</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Contacto</a>
+                <a class="nav-link active" href="#">Otros</a>
               </li>
             </ul>
           </div>
