--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
             <ul class="navbar-nav text-center"><!--ms-auto ubica los botones a la derecha-->
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Televisores</a>
+                <a class="nav-link active" aria-current="page" https://www.amazon.es/Hisense-55A6K-Pulgadas-Virtual-televisor/dp/B0C3RVXH49/ref=sr_1_7?crid=2C5N7WOL7ONXL&keywords=televisores+55+pulgadas+smart+tv&qid=1698960088&sprefix=%2Caps%2C96&sr=8-7&ufe=app_do%3Aamzn1.fos.5e544547-1f8e-4072-8c08-ed563e39fc7d>Televisores</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Laptops</a>
