--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <p>Samsung Crystal UHD 2022 55AU7095 - Smart TV de 55", HDR 10, Procesador Crystal 4K,
                      Q-Symphony, Sonido Inteligente y Compatible con Alexa [Clase de eficiencia energética G]
                   </p>
-                  <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
+                  <button type="submit"><a class="nav-link active" href="https://amzn.to/40m7Tnl">Ver Precios</a></button>
               </article>
           </main>
   
@@ -82,7 +82,7 @@
             <p>TESLA - Smart TV de 55" (127cm), Televisión Resolución UHD, Android TV 11,
                Hey Google Official Assistant, WiFi & Bluetooth, 2 Altavoces 12W, Chromecast Integrado, HDR10 3.840x2.160 (55E635SUS) - 2023 [Clase de eficiencia energética E]
             </p>
-            <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
+            <button type="submit"><a class="nav-link active" href="https://amzn.to/3QnLIsc">Ver Precios</a></button>
           </aside>
 
           <aside class="sidebar-2">
@@ -94,7 +94,7 @@
             <p>TOSHIBA 55UV2363DG Smart TV 4K UHD de 55", sin Marcos, con HDR10, Dolby Audio, 
                Compatible con Asistente de Voz Alexa y Google, Bluetooth [Clase de eficiencia energética E]
             </p>
-            <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
+            <button type="submit"><a class="nav-link active" href="https://amzn.to/47dcGtk">Ver Precios</a></button>
 
             <h2>Televisor LG</h2>
             <img class="hisense" src="img/tv-xiaomi.png" alt="logo">
@@ -105,7 +105,7 @@
                Dolby Digital Plus, Alexa/Google Assistant [Clase de eficiencia energética G]
             </p>
             
-            <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
+            <button type="submit"><a class="nav-link active" href="https://amzn.to/3Qn2CaA">Ver Precios</a></button>
           </aside>
       </div>
 
