--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <p>Xiaomi F2 55" Smart Fire TV 138 cm, 4K Ultra HD, HDR10, Aluminio sin Marcos, Airplay, Prime Video, Netflix, Control de Voz Alexa, 
                HDMI 2.1, Bluetooth, USB, Sintonizador Triple, Modelo 2022 [Clase de eficiencia energética G]
             </p>
-            <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
+            <button type="submit"><a class="nav-link active" href="https://amzn.to/3MtNQ0C">Ver Precios</a></button>
             
             <h2>Televisor Tesla</h2>
             <img src="img/tv-toshiba.jpg" alt="logo">
