--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <p>Telefunken 55DTUA523 - Android TV 55 Pulgadas 4K Ultra HD, Diseño sin Marcos, HDR10, Dolby Vision, Bluetooth, 
                      Chromecast Integrado, Compatible con Google Assistant, Dolby Atmos [Clase de eficiencia energética E]
                   </p>
-                  <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
+                  <button type="submit"><a class="nav-link active" href="https://amzn.to/3FKlDP9">Ver Precios</a></button>
                   
                   <h2>Televisor Samsung</h2>
                   <img src="img/tv-telefunken.jpg" alt="logo">
