--- a/laptop.html
+++ b/laptop.html
@@ -24,10 +24,10 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link active" href="#">Laptops</a>
+                <a class="nav-link active" href="laptop.html">Laptops</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Celulares</a>
+                <a class="nav-link active" href="celulares.html">Celulares</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Otros</a>
