--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
                   
                   <h2>Televisor Samsung</h2>
-                  <img src="img/tv-telefunken.jpg" alt="logo">
+                  <img src="img/tv-samsung.jpg" alt="logo">
                   <h4>
                       Descripción:
                   </h4>
@@ -75,7 +75,7 @@
             <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
             
             <h2>Televisor Tesla</h2>
-            <img src="img/tv-toshiba.jpg" alt="logo">
+            <img src="img/tv-tesla.jpg" alt="logo">
             <h4>
               Descripción:
             </h4>
@@ -97,7 +97,7 @@
             <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
 
             <h2>Televisor LG</h2>
-            <img class="hisense" src="img/tv-xiaomi.png" alt="logo">
+            <img class="hisense" src="img/tv-lg.png" alt="logo">
             <h4>
               Descripción:
             </h4>
