--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <button type="submit"><a class="nav-link active" href="https://amzn.to/460Tm1A">Ver Precios</a></button>
 
             <h2>Televisor LG</h2>
-            <img class="hisense" src="img/tv-lg.png" alt="logo">
+            <img class="hisense" src="img/tv-lg.jpg" alt="logo">
             <h4>
               Descripción:
             </h4>
