--- a/celulares.html
+++ b/celulares.html
@@ -30,7 +30,7 @@
                 <a class="nav-link active" href="celulares.html">Celulares</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Otros</a>
+                <a class="nav-link active" href="otros.html">Otros</a>
               </li>
             </ul>
           </div>
