--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="language" content="spanish">
-    <meta name="copyright" content="https://ventas0nline.github.io/ventasonline/celulares.html">
+    <meta name="copyright" content="https://ventas0nline.github.io/ventasonline/index.html">
     <meta name="author" content="James Marin">
     <meta name="audience" content="all">
     <meta name="description" content="En esta página veras los precios 
@@ -15,7 +15,7 @@
     <meta name="category" content="televisores de 40 y 55 pulgadas">
     <link rel="icon" type="image/x-icon" 
     href="img/icono.png">
-    <link rel="canonical" href="https://ventas0nline.github.io/ventasonline/celulares.html">
+    <link rel="canonical" href="https://ventas0nline.github.io/ventasonline/index.html">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/tienda.css">
