--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
       </nav>
-      <h1>Los Mejores Televisores</h1>
+      <h1 class="titulo">LOS MEJORES TELEVISORES</h1>
 
         <div class="contenedor contenedor-grid">
           <main class="contenido-principal">
