--- a/otros.html
+++ b/otros.html
@@ -49,7 +49,7 @@
           </div>
         </div>
       </nav>
-      <h1>Lo mas Vendido</h1>
+      <h1 class="titulo">LO MAS VENDIDO</h1>
 
         <div class="contenedor contenedor-grid">
           <main class="contenido-principal">
