--- a/laptop.html
+++ b/laptop.html
@@ -49,7 +49,7 @@
           </div>
         </div>
       </nav>
-      <h1>Las mejores Laptos</h1>
+     <h1 class="titulo">LAS MEJORES LAPTOPS</h1>
 
         <div class="contenedor contenedor-grid">
           <main class="contenido-principal">
