--- a/celulares.html
+++ b/celulares.html
@@ -49,7 +49,7 @@
           </div>
         </div>
       </nav>
-      <h1 class="titulo">CELULARES</h1>
+      <h1 class="titulo">LOS MEJORES CELULARES</h1>
 
         <div class="contenedor contenedor-grid">
           <main class="contenido-principal">
